--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,1 +1,141 @@
 
+
+.toolTip {
+  position: fixed;
+  display: none;
+  width: auto;
+  height: auto;
+  background: none repeat scroll 0 0 white;
+  border: 0 none;
+  border-radius: 8px 8px 8px 8px;
+  box-shadow: -3px 3px 15px #888888;
+  color: black;
+  font: 12px sans-serif;
+  padding: 5px;
+  text-align: center;
+}
+
+.capitalize {
+  text-transform: capitalize;
+}
+
+.post-list {
+  .posts-items {
+    .row {
+     margin-bottom: 50px;
+    }
+  }
+}
+
+.brand-rankings {
+  .table-style {
+    tr:first-child {
+      span {
+        padding-left: 10px;
+      }
+    }
+    tr {
+      &.industry {
+        background-color: #DCE5ED;
+      }
+      &.mybrand {
+        background-color: #DEF1ED;
+      }
+      th {
+        span {
+          font-size: 11px;
+          color: #ccc;
+        }
+      }
+      td {
+        width: 13%;
+        border-left:1px solid #ccc;
+        &.alt {
+          width: 20%;
+          border-left: none;
+        }
+        &.alt2 {
+          width: 16%;
+          border-left: none;
+        }
+        span {
+          position: relative;
+          display: block;
+          padding: 5px !important;
+          font-size: 13px;
+          font-weight: bold;
+          .difference {
+            font-size: 10px;
+            color: green;
+            display: inline;
+            &.negative {
+              color: red;
+            }
+            .ico {
+              position: absolute;
+              top: 0;
+              left: 0;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+
+.brand-audiences {
+  .table-style {
+    tr:first-child {
+      span {
+        padding-left: 10px;
+      }
+    }
+    tr {
+      &.industry {
+        background-color: #DCE5ED;
+      }
+      &.mybrand {
+        background-color: #DEF1ED;
+      }
+      th {
+        span {
+          font-size: 11px;
+          color: #ccc;
+        }
+      }
+      td {
+        width: 13%;
+        border-left:1px solid #ccc;
+        &.alt {
+          width: 20%;
+          border-left: none;
+        }
+        &.alt2 {
+          width: 16%;
+          border-left: none;
+        }
+        span {
+          position: relative;
+          display: block;
+          padding: 5px !important;
+          font-size: 13px;
+          font-weight: bold;
+          .difference {
+            font-size: 10px;
+            color: green;
+            display: inline;
+            &.negative {
+              color: red;
+            }
+            .ico {
+              position: absolute;
+              top: 0;
+              left: 0;
+            }
+          }
+        }
+      }
+    }
+  }
+}
