--- a/sass/home.scss
+++ b/sass/home.scss
@@ -1,8 +1,9 @@
 /******************************************************/
 .main-cont{
     border-top: 1px solid #F2F1F3;
-    background-color:#F5F7F9;
+    background-color:#fff;
     padding: 20px;
+    position: relative;
 }
 
 .md-mu{
@@ -20,20 +21,21 @@
 
 
 /********************************************************/
-.md-sidebar-menu{}
-.md-sidebar-menu li{
-    border-bottom: 1px solid #D6D8DE;
-}
-.md-sidebar-menu li a{
-    display: block;
-    padding: 12px 0;
-    color:#1D1628;
-    font-size: 14px;
-}
-
-.md-sidebar-menu li a.active{
-    padding-left: 15px;
-    font-weight: bold;
+.md-sidebar-menu{
+    li{
+        border-bottom: 1px solid #D6D8DE;
+        a{
+            display: block;
+            padding: 12px 0;
+            color:#1D1628;
+            font-size: 14px;
+            &.active{
+                padding-left: 15px;
+                font-weight: bold;
+                background: url("/web/statics/images/ic-arrow-selected.png") no-repeat left center;
+            }
+        }
+    }
 }
 
 /************************************************************/
@@ -56,9 +58,28 @@
     padding: 40px 0 60px 0;
     h3{
         font-size: 58px;
+        margin-bottom: 10px;
+        font-family: 'proxima_nova_ltthin';
     }
     p{
         font-size: 17px;
+    }
+    .fas{
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        margin-right: 5px;
+        position: relative;
+        top: 2px;
+        &.fas-follow{
+            background: url("/web/statics/images/ic-followers.png") no-repeat center center;
+        }
+        &.fas-post{
+            background: url("/web/statics/images/ic-post.png") no-repeat center center;
+        }
+        &.fas-likes{
+            background: url("/web/statics/images/ic-heart.png") no-repeat center center;
+        }
     }
 }
 
@@ -116,8 +137,11 @@
     .img{
         width: 100%;
         margin-bottom: 15px;
+        max-height: 204px;
+        border-radius: 10px;
+        overflow: hidden;
         img{
-            border-radius: 10px;
+
             display:block;
             width: 100%;
         }
@@ -130,6 +154,7 @@
             width: 100%;
             tr{
                 td{
+                  font-weight: normal;
                     padding: 5px;
                     font-size: 13px;
                     font-family: "proxima_nova_ltsemibold";
@@ -257,14 +282,14 @@
         font-family:'Proxima Nova', sans-serif;
     }
     .top{
-        padding-bottom: 20px;
+        padding-bottom: 25px;
     }
     .btm{
         padding: 20px 20px 0 20px;
         border-top: 1px solid #D2DEDE;
     }
     .fot{
-        padding-top: 20px;
+        padding-top: 15px;
     }
 }
 
@@ -277,15 +302,21 @@
         .f-left{
             .title{
                 text-align: left;
+                font-size: 12px;
+                line-height: 140%;
+                i{
+                    margin-left: 5px;
+
+                }
             }
             text-align:left;
             float: left;
-            width: 30%;
+            width: 45%;
         }
         .f-right{
             text-align: right;
             float: left;
-            width: 70%;
+            width: 55%;
         }
         p{
 
@@ -294,24 +325,53 @@
 
         }
         .min-max{
+            margin-top: 10px;
+            p{
+                font-weight: bold;
+                span{
+                    display: inline-block;
+                    margin: 0 10px;
+                }
+                .min{
 
+                }
+                .max{
+
+                }
+                .ico-up{
+
+                }
+                .ico-dw{
+
+                }
+            }
         }
     }
     .btm{
         padding-top: 0px;
         border-top: 1px solid #D2DEDE;
         overflow: hidden;
+
+        padding-left: 0;
+        padding-right: 0;
         .md-block-data{
             text-align: center;
             padding: 40px 0px 20px 0px;
             width: 50%;
             display: block;
             float: left;
+            &.cols-2{
+                .col-1,
+                .col-2{
+                    width: 50%;
+                }
+            }
             &:first-child{
                 border-right: 1px solid #D2DEDE;
             }
             h3{
                 margin-bottom: 30px;
+                font-size: 13px;
             }
             .col-1{
                 padding: 0 10px;
@@ -350,7 +410,20 @@
         text-align: center;
         .title{
             margin-bottom: 15px;
+            font-size: 12px;
         }
+        .col-1.full-col{
+
+        }
+        .xxs-font{
+            margin-top: 5px;
+            line-height: 140%;
+        }
+        .xs-font.bold{
+            margin-bottom: 5px;
+        }
+
+
     }
 }
 
@@ -359,8 +432,14 @@
     background-color: #F4F6F8;
     .md-block-data{
         text-align: center;
+        p{
+            b{
+                font-weight: bold;
+            }
+        }
     }
     .title{
+        font-size: 12px;
         margin-bottom: 30px;
     }
     .btm{
@@ -443,8 +522,9 @@
               }
           }
           .name{
-            font-size: 13px;
-            font-weight: bold;
+              font-size: 13px;
+              font-weight: normal;
+              letter-spacing: 2px;
           }
           .last{
               font-size: 13px;
@@ -461,8 +541,46 @@
               }
           }
           .c-and-e-ft-data{
+              .col-md-4{
+                  border-right: 1px solid #eee;
+                  &.last-col{
+                      border-right: 0;
+                  }
+              }
               h3{
 
+              }
+          }
+          .avg-increase-ugc{
+              .left-num{
+                  float: left;
+                  font-size: 25px;
+                  padding: 10px 0;
+              }
+              .right-col{
+                  float: left;
+                  margin-left: 10px;
+                  width: 60%;
+                  padding: 6px 0;
+                  span{
+                      font-size: 12px;
+                  }
+              }
+          }
+          .total-likes{
+              .left-num{
+                  float: left;
+                  font-size: 25px;
+                padding: 10px 0;
+              }
+              .right-col{
+                  float: left;
+                  margin-left: 10px;
+                  width: 60%;
+                  padding: 14px 0;
+                  span{
+                      font-size: 14px;
+                  }
               }
           }
       }
@@ -516,15 +634,24 @@
             }
             .right-col{
                 float: left;
+                margin-left: 10px;
+                width: 60%;
                 span{
-                    font-size: 15px;
+                    display: block;
+                    margin-top: 5px;
+                    margin-bottom: 8px;
+                    font-size: 14px;
                 }
                 .progressbar{
+                    background-color: #eee;
+                    margin: 0;
+                    padding: 0;
                     height: 10px;
                     width: 100%;
-                    background-color: #ddd;
                     .bar{
-                        background-color: red;
+                        margin: 0;
+                        padding: 0;
+                        background-color: #D7C0C9;
                         height: 10px;
                     }
                 }
@@ -547,6 +674,64 @@
 
  }
 
+
+ /******************************************/
+ /* MD ENGAGEMENT DAY CATEGORY             */
+ /******************************************/
+ .md-engagement-day-category{
+     .hd{
+
+     }
+     .bd{
+         .time-slider{
+             text-align: center;
+             position: relative;
+            top: 20px;
+            z-index: 10;
+             span{
+                 font-size: 13px;
+                font-weight: 700;
+             }
+         }
+     }
+     .ft{
+
+     }
+ }
+
+ .column-chart-component{
+     g text{
+         font-weight: normal;
+     }
+ }
+
+ .ico-arrow{
+     i{
+         display: block;
+         width: 13px;
+         height: 11px;
+     }
+     &.ico-up{
+         color:#6BBA9B;
+         i{
+             background: url("/web/statics/images/ic-arrow-up.png") no-repeat center center;
+         }
+     }
+     &.ico-dw{
+         color:#D99F9D;
+         i{
+             background: url("/web/statics/images/ic-arrow-dw.png") no-repeat center center;
+         }
+     }
+     &.ico-nt{
+         color:#B0AEBB;
+         i{
+             background: url("/web/statics/images/ic-arrow-nt.png") no-repeat center center;
+         }
+     }
+
+ }
+
 /******************************************/
 /* MD TAB CONT ENDG                       */
 /******************************************/
@@ -556,13 +741,22 @@
         .table-style.first-col{
             margin-top: 41px;
             tr td {
+                font-weight: normal;
                 padding: 7px 20px 8px!important;
             }
         }
     }
     .item{
         float: left;
-        width: 20%;
+        width: 192px;
+        &.first{
+            width: 160px;
+        }
+        .item-container-brands{
+            float: left;
+            width: 800px;
+            overflow-x:  scroll;
+        }
         .head{
             height: 85px;
             max-height: 85px;
@@ -575,7 +769,7 @@
             h3{
                 font-family: 'proxima_nova_ltsemibold';
                 line-height: 133%;
-                padding: 0 70px;
+                padding: 0 15px; //comparebrands
                 font-size: 19px;
                 margin-bottom: 5px;
             }
@@ -583,10 +777,15 @@
                 font-size: 12px;
                 color: #bbb;
             }
-            i.ico{
+            .close-brand{
+                background: url(/web/statics/images/ic-remove.png) no-repeat center center #4f4a58;
+                width: 16px;
+                height: 16px;
+                border-radius: 30px;
                 position: absolute;
-                top: 0px;
-                right:10px;
+                top: -5px;
+                right: 10px;
+                background-size: 16px;
             }
             .other-info{
                 p{
@@ -626,7 +825,7 @@
                         color: #ccc;
                     }
                     td{
-                        padding: 10px 20px !important;
+                        padding: 10px 10px !important;
                     }
                 }
             }
