--- a/sass/ugc.scss
+++ b/sass/ugc.scss
@@ -1,6 +1,63 @@
 
 .md-primary-data.md-ugc{
+  .cols-2{
+    .col-1,
+    .col-2{
+      width: 50%;
+      padding: 0 10px;
+    }
+  }
+  .sec-group{
+    height: 150px;
+  }
+  .sec-avg-group{
+      width: 33.3%;
+      text-align: center;
+      .top{
+            padding: 0px 0 20px;
+      }
+      .btm{
+        padding: 20px 0 0px;
+      }
+      .big{
+        font-size: 26px;
+        float: left;
+        margin-right: 10px;
+      }
+      .text{
+        width: 168px;
+        text-align: left;
+        display: inline-block;
+        float: left;
+      }
+  }
+  .sec-user-group{
+    width: 33.3%;
 
+    .top{
+      .title{
+        margin-bottom: 0px;
+        font-weight: bold;
+      }
+    }
+    .btm{
+      border-top:0px;
+      padding-top: 5px;
+    }
+  }
+  .sec-most-post{
+    width: 33.3%;
+    .top{
+      .title{
+        margin-bottom: 0px;
+        font-weight: bold;
+      }
+    }
+    .btm{
+      border-top:0px;
+      padding-top: 5px;
+    }
+  }
 }
 
 .md-brand-influencer.md-ugc{
@@ -50,6 +107,14 @@
         }
     }
 }
+
+.md-influencer-comparsion.partner-comparison{
+  .bd .table-style tr td:first-child{
+    width: 45%;
+  }
+
+}
+
 
 .md-content-engagement.md-ugc{
 
