--- a/sass/header.scss
+++ b/sass/header.scss
@@ -5,7 +5,7 @@
 /**********************************************/
 .main-header{
 	.sec-top-head{
-		height: 100px;
+		height: 104px;
 		overflow: hidden;
 		background-color: #4F4A58;
 	}
@@ -37,19 +37,21 @@
 .md-brand-head{
     display: block;
     float: left;
-    padding:30px;
+    padding:32px;
     height: 100%;
 	h2{
 		display: block;
 		margin-bottom: 10px;
 		color:#fff;
 		font-size: 18px;
-		font-weight: bold;
+		font-weight: normal;
 		margin-bottom: 10px;
+		letter-spacing: 8px;
 	}
 	p{
 		color:#fff;
 		font-size: 12px;
+		letter-spacing: 1px;
 	}
 }
 
@@ -59,16 +61,18 @@
     background-color:#45414E;
     float:right;
     height: 100%;
-	padding-left: 30px;
+	padding-left: 24px;
 	ul{
 		li{
 			float: left;
 			padding: 20px;
 			float: left;
-			padding: 40px 25px;
+			padding: 40px 24px;
+			letter-spacing: 3.8px;
+
 			a{
 				color:#fff;
-				font-size: 12px;
+				font-size: 10px;
 			}
 		}
 	}
@@ -87,9 +91,10 @@
 		display: inline-block;
 		a{
 			display: block;
-			padding: 15px 25px;
+			padding: 16px 32px;
 			color:#1D1628;
-			font-size: 15px;
+			font-size: 12px;
+			letter-spacing: 3px;
 			&.active{
 				font-weight: bold;
 			}
@@ -113,8 +118,9 @@
 .md-sub-menu li a{
     display: block;
     color:#1D1628;
-    font-size: 15px;
-    padding: 15px 25px;
+	font-size: 12px;
+	letter-spacing: 2px;
+    padding: 16px 32px;
 }
 
 .md-sub-menu li a.active,
