--- a/sass/general.scss
+++ b/sass/general.scss
@@ -62,6 +62,8 @@ ul, li{
 
 .xxs-font{
     font-size:12px;
+    line-height: 1.33;
+    letter-spacing: 1px;
 }
 .xs-font{
     font-size:19px;
@@ -71,7 +73,8 @@ ul, li{
 }
 .xm-font{
 
-    font-size:26px;
+    font-size:24px;
+    letter-spacing: 2px;
 }
 .m-font{
     font-size:36px;
@@ -80,7 +83,9 @@ ul, li{
     font-size:38px;
 }
 .xl-font{
-    font-size:50px;
+    font-weight: normal;
+    font-size:48px;
+    letter-spacing: 2px;
 }
 
 .bold{
